--- a/test/fixtures/expenses.yml
+++ b/test/fixtures/expenses.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  expense: 1.5
+  amount: 1.5
   user: one
   group: one
 
 two:
-  expense: 1.5
+  amount: 1.5
   user: two
   group: two
